<resources>
    <string name="app_name">MyPrograms</string>
    <string name="why_should_i_create_an_account">Why should I create an account?</string>
    <string name="profile">Profile</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_company">Company</string>
    <string name="user_department">Department</string>
    <string name="synchronize">Syncronize</string>
    <string name="synchronize_data_with_cloud_storage">Synchronize data with cloud storage.</string>
    <string name="data_export">Export</string>
    <string name="export_all_programs">Export all programs.</string>
    <string name="data_import">Import</string>
    <string name="import_all_programs">Import all programs.</string>
    <string name="delete">Delete</string>
    <string name="delete_all_programs">Delete all Programs</string>
    <string name="contact_support">Contact Support</string>
    <string name="contact_us_for_your_suggestions_or_complaints">Contact us for your suggestions or complaints.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_your_account_for_permanently">Delete your account for permanently.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="info">Info</string>
    <string name="info_for_account">Info for account</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="synchronization">Synchronization</string>
    <string name="sign_in">Sign In</string>
    <string name="signinAcceptTerms">By sign in or creating a new account you agree to our terms and condititions and privacy policy.</string>
    <string name="or_create_new">or create new account</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_email">Sign In With E Mail</string>
    <string name="continue_without_create_account">Continue without create an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_email">E Mail</string>
    <string name="user_password">Password</string>
    <string name="at_least_8_char">Password must be at least 8 characters</string>
    <string name="createAccount">Create Account</string>
    <string name="create">Create</string>
    <string name="programs">Programs</string>
    <string name="fab_content_desc">Add new program</string>
    <string name="edit">Edit</string>
    <string name="go_to_account">Go to account</string>
    <string name="account">Account</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="privacyPolicy"><![CDATA[Privacy & Policy]]></string>
    <string name="termsConditions"><![CDATA[Terms & Condition]]></string>
    <string name="all">All</string>
    <string name="subject">Subject</string>
    <string name="person_1">Person 1</string>
    <string name="lecture">Lecture</string>
    <string name="color">Color</string>
    <string name="more">More</string>
    <string name="addLecture">Add Lecture</string>
    <string name="subject_details">Subject Details</string>
    <string name="absence">Absence</string>
    <string name="notes">Notes</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="createProgram">Create Program</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="addProgram">Add Program</string>
    <string name="youShoulTypeATitle">You should type a title</string>
    <string name="positiveButton">Ok</string>
    <string name="negativeButton">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="use_without_create_account">Use without create an account</string>
    <string name="programDetails">Program Details</string>
    <string name="subjects">Subjects</string>
    <string name="addSubject">Add Subject</string>
    <string name="thereIsNoEventHereYet">There is no event here yet!</string>
    <string name="youMustAddSubjectToAddEvent">You must add a subject to add event</string>
    <string name="persons">Persons</string>
    <string name="people">People</string>
    <string name="person_2">Person 2</string>
    <string name="person_3">Person 3</string>
    <string name="youCouldTypeTeacherOrAssistant">You could type teacher or assistant etc.</string>
    <string name="addEvent">Add Event</string>
    <string name="editSubject">Edit Subject</string>
    <string name="event">Event</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="Repeat">Repeat</string>
    <string name="timeStart">Time Start</string>
    <string name="timeEnd">Time End</string>
    <string name="reminderRime">Reminder Time</string>
    <string name="place">Place</string>
    <string name="reminderInfo">You will receive notification.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="reminder">Reminder</string>
    <string name="onceInWeek">%1$s of every week</string>
    <string name="onceInMonth">%1$s of every month</string>
    <string name="onceInYear">%1$s of every year</string>
    <string name="day">Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="selectDay">Select Day</string>
    <string name="eventDetails">Event Details</string>
    <string name="areYouSureDeleteAllEvent">Are you sure? All events that in this subject will delete too!</string>
    <string name="editEvent">Edit Event</string>

    <string-array name="repeat">
        <item>No Repeat</item>
        <item>Once A Week</item>
        <item>Once A Month</item>
        <item>Once A Year</item>
    </string-array>

    <string-array name="reminder">
        <item>No Reminder</item>
        <item>On Time</item>
        <item>10 Minute Ago</item>
        <item>30 Minute Ago</item>
        <item>1 Hour Ago</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>